--- a/style.css
+++ b/style.css
@@ -5,14 +5,17 @@
 }
 h3{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
     color: black;
 }
 h5, h6{
     color: whitesmoke;
+    font-weight: bolder;
 }
 h1{
     color: rgb(0, 74, 163);
     font-family: 'Times New Roman', Times, serif;
+    font-weight: bolder;
 }
 .carousel-control-prev-icon, .carousel-control-next-icon {
     background-color: rgba(0, 0, 0, 0.2);
@@ -33,7 +36,10 @@ body {
   }
 p{
     color: whitesmoke;
+    font-weight: 500;
 }
 .card-text{
     color: black;
 }
+.lead{
+    font-weight: 500;
